src/test/deca/context/valid/oracle/use_defined_variable_in_while.deca
{
    int i = 1;
    while(i<10){
        println("Hello Moon !");
        i = i + 1;
    }
}