src/test/deca/context/invalid/with-object/if_with_null.deca
{
    if(null){
        println("Hello World !");
    }
}